1.0.1 FIX: Fixed commands not showing